# Hangman

./: README.md
BlackJack/: BlackJack.py
Company Employee/: Company Employee.py
Django Project/: db.sqlite3  manage.py
Django Project/api/: serializers.py  urls.py  views.py
Django Project/base/: admin.py  forms.py  models.py  urls.py  views.py
Django Project/base/migrations/: 0001_initial.py  0002_user_bio_user_name_alter_user_email.py  0003_user_avatar.py
Django Project/base/templates/base/: activity.html  activity_component.html  delete.html  delete_old.html  feed_component.html  home.html  home_old.html  login_register.html  login_register_old.html  profile.html  profile_old.html  room.html  room_form.html  room_form_old.html  room_old.html  topics.html  topics_component.html  update-user.html
Django Project/static/styles/: style.css
Django Project/studydan/: asgi.py  settings.py  urls.py  wsgi.py
Django Project/templates/: main.html  navbar.html
Fast-Api Project/balasescu-laurentiu-daniel/: .env.example  .env.testing  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  Universal_project.drawio  alembic.ini  docker-compose.yaml  pyproject.toml
Fast-Api Project/balasescu-laurentiu-daniel/docs/: Notification-Service-Sequence.drawio
Fast-Api Project/balasescu-laurentiu-daniel/migrations/: env.py
Fast-Api Project/balasescu-laurentiu-daniel/migrations/versions/: 82aa7261fc11_name.py
Fast-Api Project/balasescu-laurentiu-daniel/updateservice/: app.py  db_connection.py  settings.py
Fast-Api Project/balasescu-laurentiu-daniel/updateservice/api_tests/: conftest.py  test_application_group.py  test_db_conn.py  test_group.py  test_healthcheck_api.py  test_http_hello.py  test_package.py  test_team_api.py  test_team_applications.py  test_token.py  test_user.py
Fast-Api Project/balasescu-laurentiu-daniel/updateservice/apis/: api_healthcheck.py  app_api.py  application_groups_api.py  groups_api.py  package_api.py  team_api.py  token_api.py  user_api.py
Fast-Api Project/balasescu-laurentiu-daniel/updateservice/models/: application_groups_model.py  application_model.py  group_model.py  package_model.py  token_model.py  user_teams.py
Fast-Api Project/balasescu-laurentiu-daniel/updateservice/models/schemas/: app_schema.py  groups_schema.py  package_schema.py  team_schema.py  token_schema.py  user_schema.py
Fast-Api Project/balasescu-laurentiu-daniel/updateservice/repositories/: app_repo.py  application_groups_repo.py  file_repo.py  groups_repo.py  healthcheck_repo.py  package_repo.py  team_repo.py  tokens_repo.py  user_repo.py  validate_token_repo.py
Fast-Api Project/balasescu-laurentiu-daniel/updateservice/services/: application_group_srv.py  application_service.py  file_service.py  groups_srv.py  healthcheck_service.py  package_service.py  team_service.py  user_srv.py
Fast-Api Project/balasescu-laurentiu-daniel/updateservice/tests/: test_health_repository.py  test_health_service.py  test_healthcheck_api.py
Hangman Py/: Hangman.py
Tic Tac Toe/: Tic Tac Toe.py
Turn Based RPG/: Turn Based RPG.py
